--- a/packages/mdxts/package.json
+++ b/packages/mdxts/package.json
@@ -97,8 +97,8 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "prettier": ">=3.0.0",
     "next": ">=13.0.0",
+    "prettier": ">=3.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
     "typescript": ">=5.0.0"
@@ -110,6 +110,7 @@
     "@types/hast": "^3.0.4",
     "@types/mdast": "^4.0.4",
     "@types/mdx": "^2.0.13",
+    "@types/micromatch": "^4.0.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/title": "^3.4.3",
@@ -147,6 +148,7 @@
     "hast-util-to-jsx-runtime": "^2.3.0",
     "hast-util-to-string": "^3.0.0",
     "mdast-util-to-string": "^4.0.0",
+    "micromatch": "^4.0.7",
     "minimatch": "^9.0.4",
     "read-pkg-up": "^7.0.1",
     "rehype-infer-reading-time-meta": "^2.0.0",
